--- a/index.html
+++ b/index.html
@@ -58,6 +58,28 @@
 
         </article>
 
+    </section id="habilidades">
+
+    <h2>Habilidades e tecnologias</h2>
+
+    <table>
+
+        <thead>
+            <tr>
+                <th>Tecnologia</th>
+                <th>Nível</th>
+                <th>Descrição</th>
+
+            </tr>
+        </thead>
+
+    </table>
+
+    <section>
+
+
+
+
     </section>
 
     <footer>
@@ -81,19 +103,19 @@
 
                 <label for="assunto">Assunto</label>
                 <select name="assunto" id="assunto">
-                   <option value="orcamento">Orçamento</option>
-                   <option value="duvida">Dúvida</option>
-                   <option value="outro">Outro</option>
-                </select>  
+                    <option value="orcamento">Orçamento</option>
+                    <option value="duvida">Dúvida</option>
+                    <option value="outro">Outro</option>
+                </select>
 
                 <br>
-                
+
                 <label for="menssagem">Menssagem</label>
                 <textarea name="menssagem" id="menssagem" cols="20" rows="5" required></textarea><br>
 
                 <input type="checkbox" id="inscricao" name="Iscrição">
                 <label for="inscricao">Deseja receber minha newsletter? Fique por dentro.</label>
-               
+
                 <br>
 
                 <input type="submit" value="Enviar menssagem">
