adiçâo de formulário

--- a/index.html
+++ b/index.html
@@ -51,12 +51,16 @@
     <section id="Projetos">
 
         <h2>Projetos</h2>
+        
         <article>
             <h3>Portifólio</h3>
 
             <p>Este foi o primeiro site que eu desenvolvi estudando front-end</p>
 
         </article>
+
+        
+
 
     </section id="habilidades">
 
@@ -72,6 +76,26 @@
 
             </tr>
         </thead>
+
+        <tbody>
+            <tr>
+                <td>HTML</td>
+                <td>iniciante</td>
+                <td>Capaz de contruir estruturas de paginas semânticas e responsicas.</td>
+            </tr>
+
+            <tr>
+                <td>CSS</td>
+                <td>Intermediário</td>
+                <td>Expreriência com flexbox, Grid e animações CSS</td>
+            </tr>
+
+            <tr>
+                <td>JavaScript</td>
+                <td>Básico</td>
+                <td>Desenvolvimento de script do lado do cliente pa interações.</td>
+            </tr>
+        </tbody>
 
     </table>
 
@@ -124,6 +148,8 @@
 
 
         </section>
+
+
     </footer>
 
 </body>
